--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
