--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,11 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
+    "file-saver": "^2.0.5",
     "firebase": "^11.4.0",
+    "jspdf": "^3.0.0",
+    "jspdf-autotable": "^5.0.2",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
